--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </form>
             <button type="button" class="btn btn-light text-dark me-2" id="searchButton">Login</button>
             <button type="button" class="btn btn-primary">
-                กดมาแล้ว <span class="badge badge-light" id="bagde"></span>
+                กดมาแล้ว <span class="badge bg-danger" id="badgeCounter">0</span>
             </button>
 
             <div class="dropdown text-end">
